  rsnapshot.conf.default file to rsnapshot.conf if it's a new installation
- Added rollback feature to restore interval.0 snapshots when using link_dest
- Added second option for du, to compare subdirectories or files
- Added "du_args" to pass arguments to du
- Relaxed cmd line option validation, but only when du is the command

VERSION 1.1.6 (Jul 05 16:35 2004)
------------------------------------------------------------------------------
- Moved the bulk of the program into smaller subroutines (finally)
- show_disk_usage() now exits the program directly instead of returning a
  value
- "0" can now be used as a valid interval name
- Config error messages now wrap before 80 columns.
- Moved $file_line_num global var into parse_config_file()
- Split on \s+ instead of \s where appropriate
- Moved $rsync_include_args and $rsync_include_file_args into
  parse_config_file()
- Removed the $have_{cmd} global variables entirely
- Took %opts out of the global namespace and into get_cmd_line_opts()
- Changed a failed syslog call from an error to a warning
- Removed $cwd from global namespace
- Fixed bug where cp_al() commands would not be displayed in test mode
- Removed redundant $done flag from file_diff() while loop
- Downgraded close() file errors to warnings
- Added utils/backup_dpkg.sh to backup Debian package information
- Simplified the utils/ section of the Makefile under "make tar"
- Now exits with an error if unknown command line flags are found
- Added a check in parse_cmd_line_opts() for the config file if specified
- Changed link_dest rsync error message to description instead of number
- Changed description of test mode in the help cmd
- Changed description of -V mode
- Removed perl defaults from man page
- Clarified crontab entry timing in man page
- Removed trailing slashes on calls to mkpath() to fix bug with NetBSD
- Removed trailing slashes on calls to rename() to fix bug with NetBSD
- Removed trailing slashes on calls to rmtree() just in case